# _python-tool

./: .env.example  CLAUDE.md  README.md  TEMPLATE_README.md  compose.prod.yml  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ansible/: ansible.cfg  deploy.yml  inventory.ini  inventory.ini.example
ansible/templates/: deployment-info.j2  python-tool.j2  status.j2
docs/: CONTAINER_REGISTRY.md
infrastructure/: .gitignore  cloud-init.yml  main.tf  providers.tf  terraform.tfvars.example  variables.tf
scripts/: README.md  ansible.sh  deploy.sh  dev.sh  init-template.sh  make-package-public.sh  plan.sh  push-container.sh  ssh-run.sh  ssh.sh  terraform.sh
src/python_tool/: main.py  models.py
tests/: test_main.py
