[project]
name = "python-tool"
version = "0"
requires-python = "==3.12.*"
dependencies = [
    "python-dotenv",
    "psycopg2-binary",
    "sqlalchemy",
]

[dependency-groups]
dev = ["pytest", "coverage", "ruff", "ty"]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"


[project.scripts]
python-tool = "python_tool.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.7.0", "mypy>=1.13.0"]
